# retail_rag_sim

./: .env.example  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml
.venv_test/: pyvenv.cfg
api/: dummy_api.py
data/: eval_examples.jsonl  retail.db  seed.sql
data/chroma/: chroma.sqlite3
data/docs/: finance_refunds.md  policies_pickup.md  policies_returns.md  store_operations.md
diagram/: Untitled-2025-06-22-1452.excalidraw
docker/: Dockerfile  docker-compose.yml
fine_tune/: README.md  prepare_finetune_jsonl.py
infra/aws/terraform/: README.md
src/retail_rag_sim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/retail_rag_sim/agents/: graph.py  prompts.py
src/retail_rag_sim/eval/: metrics.py  run_langsmith_eval.py  run_local_eval.py
src/retail_rag_sim/llms/: factory.py
src/retail_rag_sim/ops/: observability.py
src/retail_rag_sim/retrieval/: ingest.py  reranker.py  retriever.py
src/retail_rag_sim/tools/: api.py  db.py  email.py  pii.py  seed_db.py
tests/: test_db.py  test_pii.py
ui/: app.py
